commercialNetwork/src/scss/news.scss
.news {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #eff3f6;
    position: relative;
    padding-top: 120px;

    .container {
        position: relative;

        .news__title {
            font-style: normal;
            font-weight: 700;
            font-size: 100px;
            line-height: 122%;
            text-transform: uppercase;
            margin-bottom: 50px;

            @media (max-width: 1200px) {
                font-size: 80px;
                margin-bottom: 30px;
                text-align: center;
            }

            @media (max-width: 992px) {
                font-size: 50px;
                margin-bottom: 10px;
            }
        }

        .news-wrapper {
            .left-btn,
            .right-btn {
                position: absolute;
                width: 56px;
                height: 56px;
                background: #fff;
                box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
                border-radius: 50%;
                z-index: 10;
                top: 43.6%;
                transition: 0.3s ease;
                display: flex;
                align-items: center;
                justify-content: center;

                &:hover {
                    background-color: #ed0644;
                    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.35);

                    .arrow {
                        stroke: white;
                    }
                }

                @media (max-width: 992px) {
                    display: none;
                }
            }

            .left-btn {
                left: -28px;

                & > .arrow {
                    margin-right: 2px;
                }
            }

            .right-btn {
                right: -28px;

                & > .arrow {
                    margin-left: -1px;
                }
            }

            .arrow {
                height: 13px;
                width: 8px;
                stroke: #212121;
            }

            .news-body {
                display: flex;
                overflow: hidden;
                gap: 37px;

                .news-body__item {
                    display: flex;
                    flex-direction: column;
                    background: #ffffff;
                    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.04);
                    max-width: 33%;
                    cursor: pointer;

                    .item__header {
                        position: relative;
                        z-index: 1;
                        width: 355px;
                        height: 357px;

                        .wrapper-image {
                            position: absolute;
                            z-index: 2;
                            top: 0;
                            right: 0;
                            left: 0;
                            bottom: 0;
                            overflow: hidden;

                            .header-image {
                                object-fit: cover;
                                pointer-events: none;
                                user-select: none;
                                transition: transform 0.9s ease;
                            }
                        }

                        .item__date {
                            position: relative;
                            z-index: 2;
                            display: flex;
                            align-items: flex-end;
                            height: 100%;
                            width: 50%;
                            font-style: normal;
                            font-weight: 700;
                            font-size: 15px;
                            line-height: 160%;
                            text-transform: uppercase;
                            color: #ffffff;
                            padding: 0px 0px 20px 30px;
                        }

                        @media (max-width: 1200px) {
                            width: 100%;
                        }

                        @media (max-width: 992px) {
                            height: 300px;
                        }

                        @media (max-width: 576px) {
                            height: 220px;
                        }
                    }
                    .item__body {
                        flex-direction: column;
                        flex: 1 1 auto;
                        padding: 40px 29px 25px 29px;
                        max-width: 355px;
                        position: relative;
                        z-index: 2;
                        overflow: hidden;

                        .body__title {
                            font-weight: 700;
                            text-transform: uppercase;
                            color: #212121;
                            margin-bottom: 30px;

                            @media (max-width: 768px) {
                                margin-bottom: 10px;
                            }
                        }

                        .body__text {
                            color: #212121;
                            margin-bottom: 20px;
                        }

                        .body__link {
                            font-weight: 700;
                            color: #ed0644;

                            @media (max-width: 992px) {
                                display: block;
                                max-width: max-content;
                                margin: auto auto 0;
                            }
                        }
                        .body__title,
                        .body__text,
                        .body__link {
                            position: relative;
                            z-index: 2;
                            font-size: 16px;
                            line-height: 150%;

                            @media (max-width: 1200px) {
                                font-size: 14px;
                            }
                        }

                        &::after {
                            content: "";
                            position: absolute;
                            bottom: -17px;
                            right: -17px;
                            width: 34px;
                            height: 34px;
                            transform: rotate(45deg);
                            background-color: #ed0644;
                            z-index: 2;
                            transition: transform 0.2s ease-in-out;
                        }

                        @media (max-width: 1200px) {
                            padding: 20px;
                            margin-top: -67px;
                        }

                        @media (max-width: 992px) {
                            margin-top: 0px;
                        }
                    }

                    &:hover {
                        .item__body::after {
                            transform: rotate(45deg) scale(25);
                            transition: transform 0.2s ease-in-out;
                        }

                        .body__title,
                        .body__text,
                        .body__link {
                            color: #fff;
                            transition: color 0.3s ease;
                        }

                        .header-image {
                            transform: scale(1.1);
                            transition: transform 0.4s ease;
                        }
                    }

                    @media (max-width: 992px) {
                        flex: 0 0 auto;
                        max-width: 50%;
                    }

                    @media (max-width: 768px) {
                        max-width: 67%;
                    }
                }

                @media (max-width: 1200px) {
                    gap: 17px;
                    margin: 0 auto;
                }

                @media (max-width: 992px) {
                    overflow-x: auto;
                }
            }
        }
    }

    @media (max-width: 768px) {
        padding-top: 100px;
    }
}

